# konobangu

./: .gitattributes  .gitignore  Cargo.toml  README.md  bacon.toml  biome.json  dev.kdl  devdeps.compose.yaml  docker-compose.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  test.env.example  tsconfig.base.json  tsconfig.json  turbo.json
.cargo/: config.toml
apps/proxy/: Cargo.toml  package.json
apps/proxy/.whistle/rules/: properties
apps/recorder/: .env  .env.dev  .env.development  .env.production.example  .gitignore  Cargo.toml  package.json  recorder.config.toml  recorder.config.yaml  rsbuild.config.ts  tsconfig.json  tsr.config.json  user_agents
apps/recorder/.devcontainer/: devcontainer.json
apps/recorder/bindings/: SubscriberTask.ts  SubscriberTaskInput.ts  SubscriberTaskType.ts  SyncOneSubscriptionFeedsFullTask.ts  SyncOneSubscriptionFeedsFullTaskInput.ts  SyncOneSubscriptionFeedsIncrementalTask.ts  SyncOneSubscriptionFeedsIncrementalTaskInput.ts  SyncOneSubscriptionSourcesTask.ts  SyncOneSubscriptionSourcesTaskInput.ts
apps/recorder/config/: development.yaml
apps/recorder/examples/: mikan_collect_classic_eps.rs  mikan_doppel_season_subscription.rs  mikan_doppel_subscriber_subscription.rs  optimize_image.mjs  playground.rs
apps/recorder/public/assets/: 404.html
apps/recorder/src/: app.rs  index.tsx  lib.rs  main.tsx  routeTree.gen.ts  test_utils.rs
apps/recorder/src/app/: builder.rs  context.rs  core.rs  env.rs  ext.rs  index.tsx  mod.rs  router.rs
apps/recorder/src/auth/: basic.rs  config.rs  config.ts  errors.rs  event.ts  guard.ts  hooks.ts  middleware.rs  mod.rs  oidc.rs  service.rs
apps/recorder/src/cache/: config.rs  mod.rs  service.rs
apps/recorder/src/config/: mod.rs  settings_mixin.yaml
apps/recorder/src/controllers/: __root.tsx  graphql.rs  index.tsx  mod.rs  subscribers.rs
apps/recorder/src/crypto/: config.rs  error.rs  mod.rs  service.rs  userpass.rs
apps/recorder/src/dal/: client.rs  config.rs  mod.rs
apps/recorder/src/database/: config.rs  mod.rs  service.rs
apps/recorder/src/download/: core.rs  error.rs  mod.rs
apps/recorder/src/downloader/: core.rs  errors.rs  mod.rs
apps/recorder/src/errors/: alias.rs  app_error.rs  ext.rs  mod.rs  response.rs  whatever.rs
apps/recorder/src/extract/: defs.rs  errors.rs  http.rs  mod.rs
apps/recorder/src/fetch/: bytes.rs  client.rs  html.rs  image.rs  mod.rs  oidc.rs  ua.json
apps/recorder/src/graphql/: config.rs  extention.rs  guard.rs  mod.rs  query_root.rs  schema.rs  schema_root.rs  service.rs  transformer.rs  util.rs
apps/recorder/src/logger/: config.rs  core.rs  mod.rs  service.rs
apps/recorder/src/media/: config.rs  mod.rs  service.rs
apps/recorder/src/message/: config.rs  mod.rs  service.rs
apps/recorder/src/migrations/: defs.rs  m20220101_000001_init.rs  m20240224_082543_add_downloads.rs  m20240225_060853_subscriber_add_downloader.rs  m20241231_000001_auth.rs  m20250501_021523_credential_3rd.rs  m20250508_022044_subscriber_tasks.rs  m20250520_021135_add_tasks.rs  m20250520_021135_subscriber_tasks.rs  m20250622_015618_feeds.rs  m20250622_020819_bangumi_and_episode_type.rs  m20250625_060701_add_subscription_id_to_subscriber_tasks.rs  m20250629_065628_add_cron.rs  mod.rs
apps/recorder/src/models/: auth.rs  bangumi.rs  credential_3rd.rs  downloaders.rs  downloads.rs  episodes.rs  mod.rs  subscriber_tasks.rs  subscribers.rs  subscription_bangumi.rs  subscription_episode.rs  subscriptions.rs  task_stream_item.rs  tasks.rs
apps/recorder/src/storage/: client.rs  config.rs  mod.rs
apps/recorder/src/sync/: core.rs  mod.rs  qbit.rs  utils.rs
apps/recorder/src/task/: config.rs  core.rs  db.rs  extern.rs  mod.rs  registry.rs  service.rs
apps/recorder/src/tasks/: core.rs  create_mikan_bangumi_subscriptions_from_my_bangumi_page.rs  mod.rs  service.rs
apps/recorder/src/test_utils/: app.rs  crypto.rs  database.rs  fetch.rs  media.rs  mikan.rs  mod.rs  storage.rs  task.rs  testcontainers.rs  tracing.rs
apps/recorder/src/utils/: http.rs  json.rs  mod.rs  nom.rs
apps/recorder/src/views/: subscribers.rs
apps/recorder/src/web/: config.rs  mod.rs
apps/recorder/src/workers/: mod.rs
apps/recorder/tests/models/: subscribers.rs
apps/recorder/tests/requests/: subscribers.rs
apps/recorder/tests/tasks/: seed.rs
crates/recorder/: .gitignore  Cargo.toml
crates/recorder/.devcontainer/: devcontainer.json  docker-compose.yml
crates/recorder/config/: development.yaml  test.env  test.yaml
crates/recorder/examples/: playground.rs
crates/recorder/src/: app.rs  lib.rs
crates/recorder/src/config/: dal_conf.rs  mod.rs
crates/recorder/src/controllers/: subscribers.rs
crates/recorder/src/dal/: client.rs  mod.rs
crates/recorder/src/downloader/: bytes.rs  defs.rs  mod.rs
crates/recorder/src/downloaders/: api_client.rs  aria.rs  bytes.rs  defs.rs  error.rs  html.rs  image.rs  mod.rs  qbitorrent.rs  torrent.rs  torrent_downloader.rs
crates/recorder/src/fetch/: core.rs
crates/recorder/src/i18n/: mod.rs
crates/recorder/src/migrations/: defs.rs  m20220101_000001_init.rs  m20240224_082543_add_downloads.rs  m20240224_082543_add_resources.rs  m20240225_060853_subscriber_add_downloader.rs  mod.rs
crates/recorder/src/models/: bangumi.rs  db_utils.rs  downloaders.rs  downloads.rs  episodes.rs  mod.rs  notifications.rs  prelude.rs  resources.rs  subscribers.rs  subscriptions.rs
crates/recorder/src/parsers/: bangumi_parser.rs  defs.rs  errors.rs  html_parser.rs  mikan_ep_parser.rs  mod.rs  raw_ep_parser.rs  title_parser.rs  torrent_parser.rs
crates/recorder/src/path/: mod.rs  torrent_path.rs  url_utils.rs  vfs_path.rs
crates/recorder/src/rss/: engine.rs
crates/recorder/src/storage/: dal.rs  dal_ext.rs  dal_initializer.rs  mod.rs
crates/recorder/src/subscriptions/: defs.rs  mikan.rs  mod.rs
crates/recorder/src/utils/: cli.rs  db.rs  mod.rs  test.rs
crates/recorder/src/views/: subscribers.rs
crates/recorder/src/workers/: collect.rs  downloader.rs  mod.rs  subscription.rs  subscription_worker.rs
(+854 files in other folders)
