# cargo-features = ["codegen-backend"]

[workspace]
members = [
    "packages/testing-torrents",
    "packages/util",
    "packages/util-derive",
    "packages/fetch",
    "packages/downloader",
    "apps/recorder",
]
resolver = "2"

[profile.dev]
debug = 0
# [simd not supported by cranelift](https://github.com/rust-lang/rustc_codegen_cranelift/issues/171)
# codegen-backend = "cranelift"

[workspace.dependencies]
testing-torrents = { path = "./packages/testing-torrents" }
util = { path = "./packages/util" }
util-derive = { path = "./packages/util-derive" }
fetch = { path = "./packages/fetch" }
downloader = { path = "./packages/downloader" }

reqwest = { version = "0.12", features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
    "cookies",
] }
moka = "0.12"
futures = "0.3"
quirks_path = "0.1"
snafu = { version = "0.8", features = ["futures"] }
testcontainers = { version = "0.24" }
testcontainers-modules = { version = "0.12.1" }
testcontainers-ext = { version = "0.1.0", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.45.1", features = [
    "macros",
    "fs",
    "rt-multi-thread",
    "signal",
] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
url = "2.5.2"
anyhow = "1"
itertools = "0.14"
chrono = "0.4"
bytes = "1"
serde_with = "3"
regex = "1.11"
lazy_static = "1.5"
axum = { version = "0.8.3", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-extra = "0.10"
mockito = { version = "1.6.1" }
convert_case = "0.8"
color-eyre = "0.6.5"
inquire = "0.7.5"

[patch.crates-io]
seaography = { git = "https://github.com/dumtruck/seaography.git", rev = "10ba248" }
