# cargo-features = ["codegen-backend"]

[workspace]
members = [
    "packages/testing-torrents",
    "packages/util",
    "packages/util-derive",
    "packages/fetch",
    "packages/downloader",
    "apps/recorder",
    "apps/proxy",
]
resolver = "2"

[profile.dev]
# [simd not supported by cranelift](https://github.com/rust-lang/rustc_codegen_cranelift/issues/171)
# codegen-backend = "cranelift"

[workspace.dependencies]
testing-torrents = { path = "./packages/testing-torrents" }
util = { path = "./packages/util" }
util-derive = { path = "./packages/util-derive" }
fetch = { path = "./packages/fetch" }
downloader = { path = "./packages/downloader" }
recorder = { path = "./apps/recorder" }

reqwest = { version = "0.12.20", features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
    "cookies",
] }
moka = "0.12.10"
futures = "0.3.31"
quirks_path = "0.1.1"
snafu = { version = "0.8.0", features = ["futures"] }
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.1" }
testcontainers-ext = { version = "0.1.0", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46", features = [
    "macros",
    "fs",
    "rt-multi-thread",
    "signal",
] }
serde_json = "1.0.140"
async-trait = "0.1.88"
tracing = "0.1"
url = "2.5.2"
anyhow = "1"
itertools = "0.14"
chrono = "0.4"
bytes = "1"
serde_with = "3"
regex = "1.11"
lazy_static = "1.5"
axum = { version = "0.8.3", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
mockito = { version = "1.6.1" }
convert_case = "0.8"
color-eyre = "0.6.5"
inquire = "0.7.5"
image = "0.25.6"
uuid = { version = "1.6.0", features = ["v7"] }
maplit = "1.0.2"
once_cell = "1.20.2"
rand = "0.9.1"
rust_decimal = "1.37.2"
base64 = "0.22.1"
nom = "8.0.0"
percent-encoding = "2.3.1"
num-traits = "0.2.19"
http = "1.2.0"
async-stream = "0.3.6"
serde_variant = "0.1.3"
tracing-appender = "0.2.3"
clap = "4.5.41"
ipnetwork = "0.21.1"
typed-builder = "0.21.0"
nanoid = "0.4.0"
webp = "0.3.0"


[patch.crates-io]
seaography = { git = "https://github.com/dumtruck/seaography.git", rev = "292cdd2" }
