[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "mikan_doppel"
path = "src/bin/mikan_doppel.rs"

[dependencies]
recorder = { workspace = true, features = ["playground"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
