[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "recorder"
path = "src/lib.rs"

[[bin]]
name = "recorder_cli"
path = "src/bin/main.rs"
required-features = []

[dependencies]
loco-rs = { version = "0.13" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.42", default-features = false }
async-trait = "0.1.83"
tracing = "0.1"
chrono = "0.4"
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print"
] }

axum = "0.7.9"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls"] }
reqwest = "0.12.9"
thiserror = "2"
rss = "2"
bytes = "1.9"
itertools = "0.13.0"
url = "2.5"
fancy-regex = "0.14"
regex = "1.11"
lazy_static = "1.5"
maplit = "1.0.2"
lightningcss = "1.0.0-alpha.61"
html-escape = "0.2.13"
opendal = { version = "0.51.0", features = ["default", "services-fs"] }
quirks_path = { path = "../quirks-path" }
torrent = { path = "../torrent" }
zune-image = "0.4.15"
once_cell = "1.20.2"
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.5"
scraper = "0.22.0"
leaky-bucket = "1.1.2"
serde_with = "3"

[dev-dependencies]
serial_test = "3"
loco-rs = { version = "0.13", features = ["testing"] }
insta = { version = "1", features = ["redactions", "yaml", "filters"] }
